--- a/style.css
+++ b/style.css
@@ -1,41 +1,24 @@
-.bigbox
- {
-     width: 700px;
-     max-width: 8000px;
-     max-height: 800px;
-     height: 600px;
-     margin: 30px;
-     background: grey;
-
- }
-
 .header
  {
-    margin: 0px 0;
     background: orange;
-    padding: 10px 0;
-    text-align: center;
+    padding: 20px;
+     width: 100;
+     height: auto;
  }
-
-.img
-{
-    margin: 0px 0;
-
-}
 
 .body
 {
-    background: white;
+   background-color: #7863E7
     font-family: Arial;
-    align-content: center;
 }
 
 .foot
 {
     text-align: center;
 }
-.centrado
+
+.responsive
 {
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    height:420px
 }
