--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 .header
  {
-    background: orange;
+    background: #B404AE;
     padding: 20px;
      width: 100;
      height: auto;
+     text-align: center;
  }
 
 .body
 {
-   background-color: #7863E7
+   background-color: #7863E7;
     font-family: Arial;
 }
 
@@ -21,4 +22,9 @@
 {
     width: 100%;
     height:420px
+}
+
+h1
+{
+  color: aliceblue
 }
