--- a/style.css
+++ b/style.css
@@ -1,27 +1,26 @@
-header
- {
-    background: #81BEF7;
+
+.form_titulo{
+    background: deepskyblue;
+    color: #fff;
     padding: 20px;
-     width: 500px;
-     height: auto;
-     text-align: center;
- }
+    text-align: center;
+    font-weight: 100;
+    font-size: 30px;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    border-bottom: 3px solid darkred;
+}
 
 body
 {
-   background-color: #0000;
+    margin: 0;
+    background-color: #0000;
     font-family: Arial;
 }
 
 foot
 {
     text-align: center;
-}
-
-responsive
-{
-    width: 100%;
-    height:420px
 }
 
 h1
@@ -31,26 +30,29 @@ h1
 
 .bigbox
 {
-    width: 500px;
-    padding: 20px;
-    text-align: center;
-}
-
-.middlebox
-{
+    width: 95% ;
+    max-width: 500px;
+    margin: auto;
+    border-radius: 7px;
 
 }
 
 .littlebox
 {
     width: 200px;
-    text-align: left;
+    margin: auto;
 }
 
-.photo
+.input-48
 {
-    width: 500px;
-    padding: 20px;
+    width: 48%;
 }
+
+.input-100
+{
+    width: 100%;
+}
+
+
 
 
